create documentatio to endpoint genetare token jwt
